# Compiler

./: CMakeLists.txt  README.md
include/: code.h  error.h  ir.h  semantics.h  symbol.h  tree.h  version.h
irsim/: irsim.py  run.sh
lex/: lexer.l
parser/: parser.y
src/: code.cpp  error.c  ir.cpp  main.c  semantics.c  symbol.cpp  tree.c
testcase/: lab4_more  test.cmm
testcase/lab1_more/: A-1.cmm  A-2.cmm  A-3.cmm  A-4.cmm  A-5.cmm  A-6.cmm  A-7.cmm  A-8.cmm  A-9.cmm  B-1.cmm  B-2.cmm  C-1.cmm  C-2.cmm  D-1.cmm  D-2.cmm  D-3.cmm  E-1.cmm  E-2.cmm  E-3.cmm
testcase/lab2_more/: A-1.cmm  A-10.cmm  A-11.cmm  A-12.cmm  A-13.cmm  A-14.cmm  A-15.cmm  A-16.cmm  A-17.cmm  A-18.cmm  A-19.cmm  A-2.cmm  A-20.cmm  A-3.cmm  A-4.cmm  A-5.cmm  A-6.cmm  A-7.cmm  A-8.cmm  A-9.cmm  B-1.cmm  B-2.cmm  C-1.cmm  C-2.cmm  D-1.cmm  D-2.cmm  D-3.cmm  E-1.cmm  E-2.cmm  E-3.cmm
testcase/lab3_base/: 4.cmm
testcase/lab3_more/: A-1.cmm  A-2.cmm  A-3.cmm  A-4.cmm  A-5.cmm  B-1.cmm  B-2.cmm  B-3.cmm  C-1.cmm  C-2.cmm  D-1.cmm  E-1.1.cmm  E-1.2.cmm  E-1.3.cmm  E-2.1.cmm  E-2.2.cmm  E-2.3.cmm
testcase/lab4_base/: 1.cmm  2.cmm
